<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Treni Tracker</string>
    <string name="app_name_riga1">Treni</string>
    <string name="app_name_riga2">Tracker</string>
    <string name="hint_numero_treno">Numero treno (es. 2345)</string>
    <string name="btn_cerca">Cerca</string>
    <string name="hint_inserisci_numero">Inserisci il numero del treno di oggi. Se è ambiguo, ti faccio scegliere la corsa giusta.</string>
    <string name="nessun_treno_monitorato">Nessun treno monitorato.\nAggiungine uno qui sopra.</string>
    <string name="aggiungi_preferito">Aggiungi ai preferiti</string>
    <string name="statistiche_titolo">STORICO RITARDI</string>
    <string name="preferiti_titolo">I tuoi treni preferiti</string>
    <string name="ricerca_per_tratta">Cerca per tratta</string>
    <string name="hint_partenza">Stazione di partenza</string>
    <string name="hint_destinazione">Stazione di arrivo</string>
    <string name="aggiungi_treno">Aggiungi treno</string>
    <string name="cerca_per_tratta_btn">Cerca per tratta</string>
    <string name="cambia_tema">Cambia tema</string>
    <string name="condividi">Condividi</string>
    <string name="nav_home">Home</string>
</resources>
